<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/ic_toolbar_spotlight_setting_small"
            app:layout_constraintEnd_toStartOf="@id/contentView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/close"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/shape_rectangle_gray"
                android:gravity="center"
                android:text="@string/zero_time"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStart"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_rectangle_curved_green"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnPause"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_rectangle_curved_green"
                    android:text="@string/pause"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnContinueAndReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btnContinue"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/shape_rectangle_curved_green"
                        android:text="@string/resume"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btnReset"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/shape_rectangle_curved_green"
                        android:text="@string/reset"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/btnContinue"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lapContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/contentView"
            app:layout_constraintStart_toStartOf="@id/contentView"
            app:layout_constraintTop_toBottomOf="@id/contentView">

            <Button
                android:id="@+id/lap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/lap"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>