<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/windowButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_curved_white_chronometer_corner_button"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/contentView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="@dimen/ic_toolbar_icon_timer_close_width"
                android:layout_height="@dimen/ic_toolbar_icon_timer_close_height"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:src="@drawable/ic_toolbar_annotation_exit" />

            <ImageView
                android:id="@+id/expand"
                android:layout_width="@dimen/ic_toolbar_icon_timer_close_width"
                android:layout_margin="3dp"
                android:layout_height="@dimen/ic_toolbar_icon_timer_close_height"
                android:src="@drawable/ic_toolbar_magnifier_fullscreen" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rectangle_curved_white_chronomete_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/windowButtons"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle_curved_light_grey"
                android:padding="30dp">

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/zero_time"
                    android:textColor="#000000"
                    android:textSize="60sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_curved_green"
                    android:text="@string/start"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnPause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_rectangle_curved_green"
                    android:text="@string/pause"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/btnContinueAndReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btnContinue"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_rectangle_curved_green"
                        android:text="@string/resume"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_weight="1" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_rectangle_curved_green"
                        android:text="@string/reset"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_weight="1" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lapContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_rectangle_curved_white"
            android:orientation="vertical"
            android:padding="18dp"
            app:layout_constraintEnd_toEndOf="@id/contentView"
            app:layout_constraintStart_toStartOf="@id/contentView"
            app:layout_constraintTop_toBottomOf="@id/contentView">

            <Button
                android:id="@+id/lap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/lap"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.andylai.interviewdemo.chronometer.MaxHeightRecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

